removed overflow hidden from game card to fix slight glitch on flip

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,7 +235,6 @@ button.btn.btn-secondary.active-level{
     width: 125px;
     margin: 5px;
     border-radius: 5px;
-    overflow: hidden;
     position: relative;
     transform-style: preserve-3d;
     display: flex;
